--- a/readme
+++ b/readme
@@ -1,23 +1,3 @@
-this program is meant to track a given players deaths in skyblock (by default my friend ohoopa)
+this program is meant to track a players deaths in hypixel skyblock using a discord webhook
 
-setup
-
-first you need to set up your build enviroment:
-
-windows:
-
-get a copy of vcpkg somewhere on your computer from vcpkg.io and set it up according to there instructions (remember it turns on telemetry by default so you need to use the -disablemetrics switch to disable that)
-
-install visual studio of some sort (not vscode)
-
-open the sln file in the root of the repo
-
-change the configuration varibles (located at the top of hoopa deathh bot.cpp)
-
-change from debug mode to release
-
-press the compile button
-
-find your exe
-
-host it
+prebuilt versions will come soon but for now you are free to compile it yourself
